Correct menubar gaps  in larger/taller resolutions

--- a/src/App.css
+++ b/src/App.css
@@ -189,7 +189,7 @@ body {
   padding-top: 5px;
   padding-left: 20px;
   padding-right: 20px;
-  padding-bottom: 20px;
+  padding-bottom: 5%;
   margin-bottom: 5px;
   z-index: 999;
 }
